Fix alignment issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,7 @@
     line-height: 1.42857143 !important;
     letter-spacing: 4px;
     border-radius: 0;
+    height:55px;
 }
 
 .navbar li a, .navbar .navbar-brand {
@@ -20,6 +21,7 @@
 .navbar-nav li a:hover, .navbar-nav li.active a {
     color: #f4511e !important;
     background-color: #fff !important;
+    height:55px;
 }
 
 .navbar-default .navbar-toggle {
